# Ancalagon

./: .gitignore  CODE_OF_CONDUCT.md  README.md  app.py  check_code.sh  fix_code.sh  pylintrc  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: custom-issue-template.md
.github/workflows/: pythonapp.yml
Ancalagon/: __init__.py  app.py  request.py  resolver.py  route.py  routes.py  utils.py
Ancalagon/responses/: __init__.py  base.py  json.py
ancalagon/: app.py  mypy_types.py  request.py  resolver.py  routes.py  url.py  utils.py
ancalagon/requests/: __init__.py  base.py  http.py  websocket.py
ancalagon/resolvers/: __init__.py  http.py  websocket.py
ancalagon/responses/: __init__.py  base.py  html.py  json.py  stream_response.py
ancalagon/routes/: __init__.py  base.py  http.py  websocket.py
examples/: middlewares.py  misc_bullshit.py  startup_shutdown.py
tests/: test_app.py  test_request.py  test_resolver.py  test_routes.py  test_url.py  test_utils.py
tests/responses/: test_base.py  test_json.py  test_stream_response.py
