[tool.poetry]
name = "Ancalagon"
version = "0.0.3a0"
description = "The blackest ASGI framework"
authors = ["Nimond <dndnomin@gmail.com>"]
license = "gpl-3.0"

[tool.poetry.dependencies]
python = "^3.6"
multidict = "4.7.5"

[tool.poetry.dev-dependencies]
black = "19.10b0"
isort = "4.3.21"
pylint = "2.5.2"
pytest = "5.3.5"
pytest-asyncio = "0.10.0"
pytest-cov = "2.8.1"
requests = "^2.23.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
